# Parcel-Damage-Detection

./: LICENSE  README.md  pyproject.toml  requirements.txt
results/mectics/: best0_results.json  best1_results.json
